# arbitro

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  OPTIMIZATION.md  README.md  TODO.md  deny.toml  docker-compose.yml  endurance_run.sh  sweep_clients.sh
crates/arbitro-benches/: Cargo.toml
crates/arbitro-benches/benches/: action_dispatch.rs  batch_vs_single.rs  chaos.rs  decode_cost.rs  drain_steps.rs  e2e_throughput.rs  endurance.rs  fanout.rs  fanout_scale.rs  limits.rs  parallel_dispatch.rs  protocol_compare.rs  publish_throughput.rs  queue_balance.rs  store_compare.rs  subject_limits.rs  subject_match_scaling.rs  throughput.rs
crates/arbitro-benches/src/: lib.rs
crates/arbitro-client/: Cargo.toml
crates/arbitro-client-tokio/: Cargo.toml  README.md
crates/arbitro-client-tokio/benches/: client_publish.rs  publish_throughput.rs
crates/arbitro-client-tokio/src/: client.rs  config.rs  consumer_builder.rs  cron.rs  error.rs  lib.rs  metrics.rs  workflow.rs
crates/arbitro-client-tokio/src/conn/: heartbeat.rs  mod.rs  reconnect.rs  session.rs
crates/arbitro-client-tokio/src/consume/: demux.rs  message.rs  mod.rs
crates/arbitro-client-tokio/src/manage/: mod.rs
crates/arbitro-client-tokio/src/publish/: mod.rs
crates/arbitro-client-tokio/src/state/: mod.rs  pending.rs  seq.rs  subscriptions.rs
crates/arbitro-client-tokio/src/transport/: encode.rs  frame.rs  mod.rs  reader.rs  writer.rs
crates/arbitro-client-tokio/tests/: backpressure.rs  deliver_demux.rs  management_e2e.rs  publish_roundtrip.rs  publish_sync_concurrency.rs  reconnect.rs  shutdown.rs
crates/arbitro-client/benches/: release_in_process.rs  release_primitive.rs  release_zerocopy.rs
crates/arbitro-client/src/: client.rs  conn.rs  consumer.rs  encode.rs  error.rs  inner.rs  lib.rs  message.rs  subscription.rs
crates/arbitro-common/: Cargo.toml
crates/arbitro-common/src/: backoff_gate.rs  clock.rs  credit_map.rs  flusher.rs  gate.rs  id_pool.rs  index.rs  lib.rs  name_registry.rs  reactive_gate.rs  subject.rs  subject_trie.rs  wheel.rs
crates/arbitro-e2e/: Cargo.toml
crates/arbitro-e2e/benches/: ack.rs  capacity_check.rs  channel_overhead.rs  chaos.rs  chaos_cluster.rs  drain_isolated.rs  drain_pipeline.rs  dst_entry.rs  endurance.rs  fanout.rs  fanout_lookup.rs  flush_bench.rs  framing.rs  gate.rs  gate_cpu.rs  gate_notify.rs  limits.rs  match_table.rs  memory_growth.rs  publish.rs  queue.rs  raw_tcp_pipeline.rs  shard_loop.rs  tcp_wire.rs  throughput.rs  trace_two.rs
crates/arbitro-e2e/tests/: _one_test_probe.sh  aletheia_demo.rs  catalog_invariants.rs  client_ack_invariants.rs  cluster.rs  cron.rs  delayed.rs  drain_invariants.rs  fuzz_random_bytes.rs  idempotency_invariants.rs  integration.rs  invariants.rs  lifecycle_flow.rs  persistence.rs  shutdown.rs  test_helper.rs  workflow.rs  workflow_streams.rs
crates/arbitro-engine/: CLAUDE.md  Cargo.toml
crates/arbitro-engine/.agent/rules/: arch-modules.md  arch-structs.md  code-anti-patterns.md  code-concurrency.md  code-hot-cold-path.md  code-zero-copy.md  performance.md  testing.md
crates/arbitro-engine/benches/: ack_release.rs  drain_connection.rs  inflight_limits.rs  match_table.rs  publish_batch.rs  release_breakdown.rs  throughput.rs  var_entry_zerocopy.rs  wire_codec.rs
crates/arbitro-engine/examples/: bench_entry_build.rs  million_burst.rs  million_burst_mt.rs  trace_time.rs
crates/arbitro-engine/src/: auth.rs  batch.rs  command.rs  context.rs  error.rs  events.rs  fanout.rs  lib.rs  metrics.rs  reply.rs  transport.rs  types.rs  wire.rs
crates/arbitro-engine/src/admin/: mod.rs
crates/arbitro-engine/src/catalog/: match_table.rs  mod.rs
crates/arbitro-engine/src/common/: btrie.rs  mod.rs  subject.rs  trie.rs
crates/arbitro-engine/src/drain/: consumer.rs  frame_builder.rs  mod.rs  signal.rs  subscription.rs
crates/arbitro-engine/src/edge/: builtin.rs  mod.rs  pending_edge.rs  plugin.rs  storage.rs
crates/arbitro-engine/src/engine/: context.rs  management.rs  mod.rs  publish.rs  reply.rs  subscribe.rs  system.rs
crates/arbitro-engine/src/graph/: mod.rs  node.rs  slab.rs
crates/arbitro-engine/src/idempotency/: mod.rs
crates/arbitro-engine/src/inflight/: mod.rs
crates/arbitro-engine/src/plugin/: credit.rs  event_bus.rs  mod.rs  scheduler.rs
crates/arbitro-engine/src/ready/: mod.rs  ring.rs
crates/arbitro-engine/src/runtime/: ack.rs  bind.rs  claim.rs  drain.rs  execute.rs  group_ops.rs  mod.rs  publish.rs  retire.rs  seed.rs
crates/arbitro-engine/src/stream/: mod.rs
crates/arbitro-engine/tests/: execute_smoke.rs  integration.rs  metrics_smoke.rs  seed_replay.rs
crates/arbitro-proto/: Cargo.toml
crates/arbitro-proto/benches/: decode_tcp.rs  encode_publish.rs  rep_batch.rs
crates/arbitro-proto/src/: action.rs  error.rs  event.rs  flags.rs  ids.rs  lib.rs  lifecycle.rs  metadata.rs  validate.rs
crates/arbitro-proto/src/config/: consumer.rs  mod.rs  stream.rs
crates/arbitro-proto/src/v2/: header.rs  magic.rs  (+1 more)
crates/arbitro-proto/tests/: v2_zerocopy_roundtrip.rs
crates/arbitro-server/: Cargo.toml
crates/arbitro-server/benches/: accumulator_grouping.rs  channel_native_h2h.rs  client_only_frame.rs  dispatch_variants.rs  drain_full_scenario.rs  drain_pipeline.rs  drain_slow_consumer.rs  drain_writer_lookup.rs  fastswap_patterns.rs  local_delta.rs  lookup_strategies.rs  matchentry_enrichment.rs  memcpy_sizes.rs  mpsc_overhead.rs  shared_dense_vs_map.rs  spmc_patterns.rs  state_via_channel.rs  subject_inflight.rs  tcp_real_publish.rs  tokio_scale.rs  topology_graph.rs  trie_walk.rs  writer_stack_h2h.rs  writev_concurrent.rs
crates/arbitro-server/src/: command.rs  command_log.rs  config.rs  cron.rs  delayed.rs  dispatch.rs  drain_task.rs  flusher.rs  gate.rs  handle.rs  lib.rs  lifecycle_trace.rs  main.rs  recovery.rs  router.rs  server.rs  session.rs  shard.rs  transport.rs  workflow.rs
crates/arbitro-server/tests/: integration.rs
crates/arbitro-store/: Cargo.toml
crates/arbitro-store/src/: lib.rs  memory.rs  segment.rs  store.rs  tolerant.rs
(+111 files in other folders)
