[workspace]
resolver = "2"
members  = ["crates/arbitro-benches", "crates/arbitro-client", "crates/arbitro-common", "crates/arbitro-engine", "crates/arbitro-proto", "crates/arbitro-server", "crates/arbitro-store"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
zerocopy  = { version = "0.8", features = ["derive"] }
bytes     = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tokio     = { version = "1", features = ["full"] }
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.dependencies.tokio-uring]
version = "0.5"
