[workspace]
resolver = "2"
members  = ["crates/arbitro-e2e", "crates/arbitro-client", "crates/arbitro-engine", "crates/arbitro-proto", "crates/arbitro-server", "crates/arbitro-store"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
arbitro-engine-v2 = { path = "crates/arbitro-engine", package = "arbitro-engine" }
zerocopy  = { version = "0.8", features = ["derive"] }
bytes     = "1"
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio     = { version = "1", features = ["full"] }
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile    = "3.10"
tokio-uring = "0.5"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true
