[workspace]
resolver = "2"
members  = ["crates/arbitro-client-tokio", "crates/arbitro-common", "crates/arbitro-engine", "crates/arbitro-proto", "crates/arbitro-server", "crates/arbitro-store", "crates/arbitro-e2e"]

[workspace.package]
version = "0.5.3"
edition = "2021"
license = "MIT"

[workspace.dependencies]
arbitro-engine-v2 = { path = "crates/arbitro-engine", package = "arbitro-engine" }
arbitro-common    = { path = "crates/arbitro-common" }
arbitro-kit       = { path = "../arbitro-kit", features = ["tokio"] }
zerocopy  = { version = "0.8", features = ["derive", "alloc"] }
bytes     = "1"
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio     = { version = "1", features = ["full"] }
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile    = "3.10"
tokio-uring = "0.5"
parking_lot  = "0.12"
smallvec     = "1.13"
arc-swap     = "1.7"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true
