[package]
name = "arbitro-benches"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
zerocopy       = { workspace = true }
bytes          = { workspace = true }
tokio          = { workspace = true }
arbitro-proto  = { path = "../arbitro-proto" }
arbitro-engine = { path = "../arbitro-engine" }
arbitro-store  = { path = "../arbitro-store" }
arbitro-server = { path = "../arbitro-server" }
arbitro-client = { path = "../arbitro-client" }

[dev-dependencies]
criterion = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
tokio-uring = { workspace = true }

[[bench]]
name    = "batch_vs_single"
harness = false

[[bench]]
name    = "decode_cost"
harness = false

[[bench]]
name    = "action_dispatch"
harness = false

[[bench]]
name    = "publish_throughput"
harness = false
