[package]
name = "arbitro-benches"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
zerocopy       = { workspace = true }
bytes          = { workspace = true }
tokio          = { workspace = true }
arbitro-proto  = { path = "../arbitro-proto" }
arbitro-engine = { path = "../arbitro-engine" }
arbitro-store  = { path = "../arbitro-store" }
arbitro-server = { path = "../arbitro-server" }
arbitro-client = { path = "../arbitro-client" }

[dev-dependencies]
criterion = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
tokio-uring = { workspace = true }

[[bench]]
name    = "decode_cost"
harness = false

[[bench]]
name    = "action_dispatch"
harness = false

[[bench]]
name    = "e2e_throughput"
harness = false

[[bench]]
name    = "store_compare"
harness = false

[[bench]]
name    = "drain_steps"
harness = false

[[bench]]
name    = "parallel_dispatch"
harness = false

[[bench]]
name    = "protocol_compare"
harness = false

[[bench]]
name    = "subject_limits"
harness = false
