[package]
name = "arbitro-benches"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
zerocopy       = { workspace = true }
bytes          = { workspace = true }
tokio          = { workspace = true }
arbitro-proto  = { path = "../arbitro-proto" }
arbitro-engine = { path = "../arbitro-engine" }
arbitro-store  = { path = "../arbitro-store" }
arbitro-server = { path = "../arbitro-server" }
arbitro-client = { path = "../arbitro-client" }
arbitro-common = { path = "../arbitro-common" }


[dev-dependencies]
criterion = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
tokio-uring = { workspace = true }

[[bench]]
name    = "throughput"
harness = false

[[bench]]
name    = "limits"
harness = false

[[bench]]
name    = "fanout"
harness = false

[[bench]]
name    = "chaos"
harness = false

[[bench]]
name    = "endurance"
harness = false
