[package]
name    = "arbitro-client-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Pure-tokio Arbitro client built on arbitro-kit primitives (Mpsc, OneShotAsync, Pipe, Hub) with reconnect state machine + heartbeat watchdog."

[features]
default = []
tls = ["tokio-rustls", "rustls", "webpki-roots"]

[dependencies]
arbitro-proto      = { path = "../arbitro-proto" }
arbitro-engine-v2  = { workspace = true }
arbitro-kit        = { path = "../../../arbitro-kit", features = ["tokio"] }
tokio         = { workspace = true }
tokio-util    = { version = "0.7", features = ["rt"] }
tracing       = { workspace = true }
bytes         = { workspace = true }
zerocopy      = { workspace = true }
fastrand      = "2"
thiserror     = "1"

# TLS (optional — enable with `features = ["tls"]`)
tokio-rustls  = { version = "0.26", optional = true }
rustls        = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots  = { version = "0.26", optional = true }

[dev-dependencies]
tokio          = { workspace = true }
criterion      = { workspace = true }
tempfile       = { workspace = true }
arbitro-server = { path = "../arbitro-server" }
arbitro-proto  = { path = "../arbitro-proto" }

[[bench]]
name    = "publish_throughput"
harness = false

[[bench]]
name    = "client_publish"
harness = false
