[package]
name    = "arbitro-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arbitro-proto  = { path = "../arbitro-proto" }
arbitro-common = { path = "../arbitro-common" }
tokio         = { workspace = true }
tracing       = { workspace = true }
bytes         = { workspace = true }
zerocopy      = { workspace = true }
