[package]
name    = "arbitro-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arbitro-proto      = { path = "../arbitro-proto" }
arbitro-engine-v2  = { workspace = true }
arbitro-kit        = { path = "../../../arbitro-kit", features = ["tokio"] }
tokio         = { workspace = true }
tracing       = { workspace = true }
bytes         = { workspace = true }
zerocopy      = { workspace = true }

[dev-dependencies]
rustc-hash       = "2"
crossbeam-channel = "0.5"
libc             = "0.2"

[[bench]]
name    = "release_primitive"
harness = false

[[bench]]
name    = "release_in_process"
harness = false

[[bench]]
name    = "release_zerocopy"
harness = false
