[package]
name = "arbitro-e2e"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
zerocopy       = { workspace = true }
bytes          = { workspace = true }
tokio          = { workspace = true }
arbitro-proto  = { path = "../arbitro-proto" }
arbitro-engine-v2 = { workspace = true }
arbitro-store  = { path = "../arbitro-store" }
arbitro-server = { path = "../arbitro-server" }
arbitro-client = { path = "../arbitro-client" }
tempfile       = { workspace = true }

[features]
lifecycle_trace = ["arbitro-server/lifecycle_trace"]


[dev-dependencies]
criterion = { workspace = true }
crossbeam-channel = "0.5"
flume = "0.11"
atomic-wait = "1"
libc = "0.2"


[target.'cfg(target_os = "linux")'.dev-dependencies]
tokio-uring = { workspace = true }

[[bench]]
name    = "throughput"
harness = false

[[bench]]
name    = "limits"
harness = false

[[bench]]
name    = "fanout"
harness = false

[[bench]]
name    = "chaos"
harness = false

[[bench]]
name    = "endurance"
harness = false

[[bench]]
name    = "queue"
harness = false

[[bench]]
name    = "channel_overhead"
harness = false

[[bench]]
name    = "drain_isolated"
harness = false

[[bench]]
name    = "capacity_check"
harness = false

[[bench]]
name    = "fanout_lookup"
harness = false

[[bench]]
name    = "dst_entry"
harness = false

[[bench]]
name    = "raw_tcp_pipeline"
harness = false


 