[package]
name = "arbitro-engine"
version = "0.1.0"
edition = "2021"
description = "Pure oracle engine for Arbitro — sync, zero-copy, single-threaded"

[dependencies]
ahash = "0.8"
bytes = "1"
zerocopy = { version = "0.8", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "match_table"
harness = false
