[package]
name = "arbitro-engine"
version = "0.1.0"
edition = "2021"
description = "Pure oracle engine for Arbitro — sync, zero-copy, single-threaded"

[dependencies]
foldhash = "0.1"
bytes = "1"
zerocopy = { version = "0.8", features = ["derive"] }
smallvec = "1.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

