[package]
name = "arbitro-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zerocopy = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
foldhash = "0.1"

[dev-dependencies]
tokio = { workspace = true }

[[bench]]
name = "encode_publish"
harness = false

[[bench]]
name = "decode_tcp"
harness = false
