[package]
name    = "arbitro-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arbitro-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
default = []
# Enables the one-shot lifecycle profiler (lifecycle_trace.rs).
# When OFF, `record()` compiles to a no-op `#[inline(always)] {}` and every
# call site is eliminated by dead-code elimination — zero instructions in
# the final binary, zero AtomicBool gate, zero cost on the hot path.
# Enable with `cargo test --features lifecycle_trace` when you need to
# profile end-to-end timings of a single message through the server.
lifecycle_trace = []
# TLS support via rustls. Requires ARBITRO_TLS_CERT and ARBITRO_TLS_KEY env vars.
tls = ["dep:tokio-rustls", "dep:rustls-pemfile"]

[dependencies]
arbitro-engine-v2 = { workspace = true }
arbitro-common    = { workspace = true }
arbitro-proto     = { path = "../arbitro-proto" }
arbitro-store     = { path = "../arbitro-store" }
arbitro-kit       = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
bytes             = { workspace = true }
zerocopy          = { workspace = true }
papaya            = "0.2"
foldhash          = "0.1"
parking_lot       = "0.12"
# TLS (optional)
tokio-rustls      = { version = "0.26", optional = true }
rustls-pemfile    = { version = "2", optional = true }

[dev-dependencies]
libc           = "0.2"
ahash          = "0.8"
dashmap        = "6"
rapidhash      = "1"
rustc-hash     = "2"
arc-swap       = "1"
crossbeam-channel = "0.5"
crossbeam-queue   = "0.3"
socket2          = "0.5"

[[bench]]
name = "lookup_strategies"
harness = false

[[bench]]
name = "local_delta"
harness = false

[[bench]]
name = "dispatch_variants"
harness = false

[[bench]]
name = "matchentry_enrichment"
harness = false

[[bench]]
name = "subject_inflight"
harness = false

[[bench]]
name = "accumulator_grouping"
harness = false

[[bench]]
name = "topology_graph"
harness = false

[[bench]]
name = "shared_dense_vs_map"
harness = false

[[bench]]
name = "fastswap_patterns"
harness = false

[[bench]]
name = "state_via_channel"
harness = false

[[bench]]
name = "spmc_patterns"
harness = false

[[bench]]
name = "tokio_scale"
harness = false

[[bench]]
name = "drain_pipeline"
harness = false

[[bench]]
name = "trie_walk"
harness = false

[[bench]]
name = "drain_writer_lookup"
harness = false

[[bench]]
name = "drain_full_scenario"
harness = false

[[bench]]
name = "tcp_real_publish"
harness = false

[[bench]]
name = "writer_stack_h2h"
harness = false

[[bench]]
name = "channel_native_h2h"
harness = false

[[bench]]
name = "drain_slow_consumer"
harness = false

[[bench]]
name = "client_only_frame"
harness = false

[[bench]]
name = "writev_concurrent"
harness = false

[[bench]]
name = "mpsc_overhead"
harness = false
