[package]
name    = "arbitro-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arbitro-server"
path = "src/main.rs"

[[bin]]
name = "arbitroctl"
path = "src/bin/arbitroctl.rs"
required-features = []

[lib]
path = "src/lib.rs"

[features]
default = []
# Enables the one-shot lifecycle profiler (lifecycle_trace.rs).
# When OFF, `record()` compiles to a no-op `#[inline(always)] {}` and every
# call site is eliminated by dead-code elimination — zero instructions in
# the final binary, zero AtomicBool gate, zero cost on the hot path.
# Enable with `cargo test --features lifecycle_trace` when you need to
# profile end-to-end timings of a single message through the server.
lifecycle_trace = []
# TLS support via rustls. Requires ARBITRO_TLS_CERT and ARBITRO_TLS_KEY env vars.
tls = ["dep:tokio-rustls", "dep:rustls-pemfile", "dep:thiserror"]

[dependencies]
arbitro-engine-v2 = { workspace = true }
arbitro-common    = { workspace = true }
arbitro-proto     = { path = "../arbitro-proto" }
arbitro-store     = { path = "../arbitro-store" }
arbitro-kit       = { workspace = true }
tokio             = { workspace = true }
arbitro-client-tokio = { path = "../arbitro-client-tokio" }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
bytes             = { workspace = true }
zerocopy          = { workspace = true }
foldhash          = "0.1"
nohash-hasher     = "0.2"
crc32fast         = "1.4"
parking_lot       = { workspace = true }
smallvec          = { workspace = true }
arc-swap          = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
croner            = "2"
chrono            = { version = "0.4", default-features = false, features = ["clock"] }
# TLS (optional)
tokio-rustls      = { version = "0.26", optional = true }
rustls-pemfile    = { version = "2", optional = true }
thiserror         = { version = "1", optional = true }

[dev-dependencies]
# (intentionally empty — benches now use only workspace deps)

# Benches removed: they were strategy comparisons used during
# development, not regression benchmarks. Add a new bench under
# `benches/` when targeting a specific production path.
