[package]
name = "arbitro-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arbitro-proto     = { path = "../arbitro-proto" }
arbitro-engine-v2 = { workspace = true }
zerocopy          = { workspace = true }
memmap2 = "0.9"
crc32fast = "1.4"
tracing   = { workspace = true }

[dev-dependencies]
tempfile = "3"
